--- a/package.json
+++ b/package.json
@@ -10,9 +10,19 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.0",
+    "@astrojs/preact": "^4.1.0",
+    "@astrojs/react": "^4.3.0",
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.4.1",
+    "@fontsource-variable/inconsolata": "^5.2.5",
+    "@fontsource-variable/inter": "^5.2.5",
+    "@fontsource-variable/inter-tight": "^5.2.5",
+    "@fontsource-variable/roboto-condensed": "^5.2.5",
+    "@tailwindcss/vite": "^4.1.8",
     "astro": "^5.9.0",
-    "sharp": "^0.34.2"
+    "ninja-keys": "^1.2.2",
+    "preact": "^10.26.8",
+    "sharp": "^0.34.2",
+    "tailwindcss": "^4.1.8"
   }
 }
