--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource-variable/inter": "^5.2.5",
     "@fontsource-variable/inter-tight": "^5.2.5",
     "@fontsource-variable/roboto-condensed": "^5.2.5",
+    "@midudev/tailwind-animations": "^0.2.0",
     "@tailwindcss/vite": "^4.1.8",
     "astro": "^5.9.0",
     "ninja-keys": "^1.2.2",
